# qteverywhere.5.15.2

./: .gitignore  README.md  configure.bat
demo/Authorization/: CMakeLists.txt  README.md  main.cc
demo/Authorization/netservice/: AuthHttpRequest.cc  AuthHttpRequest.h
demo/Authorization/src/: AuthHttpRequest.cc  AuthHttpRequest.h  DownloadManager.cc  DownloadManager.h  Main.cc  MainWindow.cc  MainWindow.h
demo/Doc/: qmake工程文件.md  qtwebengine编译调试定位方法.docx  qt的connect参数.doc  打开Qt调试日志.doc
demo/FloatWidget/: CMakeLists.txt  README.md  main.cpp
demo/QGet/: CMakeLists.txt  Readme.md
demo/QGet/src/: DownloadManager.cc  DownloadManager.h  Main.cpp
demo/QNetworkTest/: DownloadManager.cc
demo/QOpenGLDetector/: CMakeLists.txt  Main.cpp  Readme.md
demo/RoundLabel/: CMakeLists.txt  CRoundLabel.h
demo/RoundLabel/src/: Main.cpp  RoundLabel.cpp  RoundLabelEx.cpp
demo/ScreenCaptureCrop/: README.md
demo/ScreenCaptureCrop/src/: Main.cpp  Screen.cpp  ScreenWidget.cpp
demo/SimpleBrowser/: CMakeLists.txt  Readme.md
doc/: Qt-Creator无法使用中文输入法.doc  qmake变量和函数.md
examples/qtapp/RoundLabel/: CRoundExLabel.cpp  CRoundExLable.h  CRoundLabel.cpp
examples/qtapp/authorization/: CMakeLists.txt  README.md
examples/qtapp/authorization/machineid/: GetCpuIndex.cc  GetCpuIndex.h
examples/qtapp/authorization/netservice/: DownloadManager.cc
examples/qtapp/authorization/ui/: authorization.qrc  mainwindow.cc  mainwindow.h
examples/qtapp/floatwidget/: .gitignore  README.md  floatwidget_win.cpp  floatwidget_win.h
examples/qtapp/qnetworkapp/: DownloadManager.h  Readme.md  main.cpp  qget.pro
examples/qtbase/corelib/tools/contiguouscache/: contiguouscache.pro  randomlistmodel.cpp
examples/qtbase/embedded/lightmaps/: mapzoom.cpp
qtbase/examples/corelib/threads/mandelbrot/: main.cpp
qtbase/examples/corelib/tools/customtype/: customtype.pro
qtdeclarative/examples/qml/referenceexamples/adding/: adding.pro
qtdeclarative/examples/qml/referenceexamples/attached/: attached.pro
qtwebengine/: README.md
